// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Room findByIdAndUpdate should update a room 1`] = `
Object {
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "this is a test",
  "name": "updated",
  "roomId": 1,
  "updatedAt": Any<Date>,
}
`;

exports[`Room save should save a new room 1`] = `
Object {
  "createdBy": 1,
  "description": "test",
  "name": "test-save",
  "roomId": 3,
}
`;

exports[`Room save should save a new room 2`] = `
Object {
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "test",
  "name": "test-save",
  "roomId": 3,
  "updatedAt": Any<Date>,
}
`;
